# tg-claude-orchestrator

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  REVIEW.md  TODO.md  ansi.py  bashshell.py  bot.py  bubble.py  channel_server.py  config.py  install.sh  launcher.py  logsignals.py  mdrender.py  pyproject.toml  reply_server.py  requirements-dev.txt  requirements.txt  sessions.py  texts.py
box/: README.md  __init__.py  ansi.py  dialog.py  launch.py  pty.py  ready.py  transcript_path.py
box_cli/: __init__.py  cli.py  profiles.py  tty.py  wallet.py
docs/: ARCHITECTURE-claude-box.md  DECISIONS-claude-box.md  FORK-agent-vm-egress-proxy.md  MIGRATION-redesign-claude-box.md  REFACTOR-core-decomposition.md  REVIEW-2026-07-19.md  REVIEW-2026-07-21.md  VISION-standalone-launcher.md  agent-vm-extension-options.md  agent-vm-integration.md  messaging-connector.md  secrets-wallet.md
orchestrator/: __init__.py  __main__.py  bashshell.py  bot.py  bubble.py  channel_server.py  config.py  hookscript.py  reply_server.py  runner.py  sandbox.py  sessions.py  texts.py  toolline.py  turn.py
tests/: access_gate_test.py  agent_bubble_test.py  ask_grant_test.py  bg_tasks_test.py  box_autonomy_test.py  box_cli_profiles_test.py  box_cli_shims_test.py  box_cli_test.py  box_cli_vm_test.py  box_cli_wallet_test.py  box_dialog_test.py  box_launch_test.py  box_pty_test.py  box_ready_test.py  box_transcript_path_test.py  box_tty_test.py  box_unattended_test.py  bubble_test.py  callbacks_test.py  channel_server_test.py  command_menu_test.py  (+60 more)
(+70 files in other folders)
